Bug #12411
bge: variable may be used uninitialized
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../../common/io/bge/bge_kstats.c: In function 'bge_m_stat': ../../common/io/bge/bge_kstats.c:942:18: error: 'bstp' may be used uninitialized in this function [-Werror=maybe-uninitialized] 942 | *val = bstp->s.dot3StatsFrameTooLongs; | ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~ ../../common/io/bge/bge_chip2.c: In function 'bge_chip_factotum': ../../common/io/bge/bge_chip2.c:5378:6: error: 'dma_state' may be used uninitialized in this function [-Werror=maybe-uninitialized] 5378 | if (dma_state != DDI_FM_OK) { | ^ cc1: all warnings being treated as errors