12411 bge: variable may be used uninitialized

Change-Id: If82dad6f41e319bc1f1d0b84f50749c898575a18